# ros2_template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckignore  cmake-format.yaml  cyclonedds.xml  pyproject.toml  pyrightconfig.json
.devcontainer/: 0_build_devcontainer_base.sh  Dockerfile.jazzy  Dockerfile.jazzy.dockerignore  Dockerfile.user.dockerignore  devcontainer.json  docker-compose.base.yml  docker-compose.yml  requirements.txt  template.env
.devcontainer/config/: aliases.txt
.devcontainer/gdb/: .gdbinit
.devcontainer/gdb/printers/: __init__.py  eigen.py  nlohmann.py
.devcontainer/scripts/: 00_devcontainer_entrypoint.sh  01_devcontainer_init.sh
.devcontainer/zsh/: .p10k.zsh  .zshrc
ros2/ros2_ws/src/example_interfaces/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/example_interfaces/action/: ExampleAction.action
ros2/ros2_ws/src/example_interfaces/srv/: ExampleService.srv
