<?xml version="1.0"?>
<package format="3">
  <name>example_interfaces</name>
  <version>0.0.0</version>
  <description>Example package containing interface definitions</description>

  <maintainer email="phillip.diekmann@does-not-exist.com">Phillip Diekmann</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <build_depend>rosidl_default_runtime</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
